# dyrochki

./: Cargo.toml  Procfile  README.md  build.rs  local.Dockerfile  render.Dockerfile
locales/ru_RU/: general.ftl
src/: main.rs
src/cli/: mod.rs  tests.rs
src/holes_counter/: mod.rs
src/i18n/: holes.rs  mod.rs  tests.rs
src/web_server/: mod.rs
static/templates/: index.hbs
