[package]
name = "dyrocki"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent = "0.16.0"
unic-langid = { version = "0.9.0", features = ["macros"] }
