[package]
name = "dyrocki"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"
clap = { version = "4.0.10", features = ["cargo"] }
fluent = "0.16.0"
handlebars = { version = "4.3.5", features = ["dir_source"] }
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
unic-langid = { version = "0.9.0", features = ["macros"] }
